fix: parallelism support added + matrix collapse UX changes

--- a/src/modules/70-pipeline/components/PipelineDiagram/Nodes/MatrixNode/MatrixNode.module.scss
+++ b/src/modules/70-pipeline/components/PipelineDiagram/Nodes/MatrixNode/MatrixNode.module.scss
@@ -17,6 +17,31 @@
   align-items: center;
 }
 
+.stepCount {
+  display: inline-flex;
+  align-items: center;
+  padding: 0 var(--spacing-2) !important;
+  font-size: var(--font-size-small) !important;
+  color: var(--grey-900);
+  font-weight: 500;
+  height: var(--spacing-6);
+  border-radius: var(--spacing-2);
+  border-radius: 4px;
+  white-space: nowrap;
+
+  & > :global(.bp3-icon),
+  & > .running-animation {
+    margin-right: var(--spacing-2);
+  }
+
+  &[data-status='success'] > :global(.bp3-icon) {
+    color: var(--green-500);
+  }
+
+  &[data-status='failed'] > :global(.bp3-icon) {
+    color: var(--red-500);
+  }
+}
 .stepGroupNode {
   height: 80px !important;
   width: 80px !important;
@@ -36,6 +61,11 @@
       opacity: 0 !important;
     }
     pointer-events: initial;
+  }
+
+  .collapsedMatrixWrapper {
+    padding: var(--spacing-xxlarge);
+    padding-bottom: 0 !important;
   }
 
   .closeNode {
